added temp view to write queries

--- a/NFL_Project.ipynb
+++ b/NFL_Project.ipynb
@@ -747,8 +747,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "84ae7c14-fa2d-45ad-b385-cd4d3f1df690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teams_and_players.createOrReplaceTempView('players_teams')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "bd7c05c5-8cf8-43c8-8c81-351cb246a00b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#new = spark.sql('query')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a400b0d6-4b02-4a8f-96f6-7349003f638f",
    "metadata": {},
    "outputs": [],
    "source": []
