--- a/old_spark.ipynb
+++ b/old_spark.ipynb
@@ -4314,7 +4314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "nfl_env",
    "language": "python",
    "name": "python3"
   },
@@ -4328,7 +4328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
