build some plots

--- a/old_spark.ipynb
+++ b/old_spark.ipynb
@@ -4314,7 +4314,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "nfl_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
